fixing header menu on mobile view

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -441,6 +441,7 @@ body {
 }
 
 @media (max-width: 575px) {
+  .header,
   .header.header--home {
     background-size: cover;
     height: auto;
